# SDUWH19THSmartCar

./: CMakeLists.txt  PictureCap.cpp  README.en.md  README.md  RunImages.cpp  StaticTest.cpp  config.json  mainpro.cpp  pthreadcap.cpp
res_datav1/config/: config_ppncnms.json  config_ppncnna.json
res_datav1/model/10class249e/: nms.tar
res_datav1/model/10classv2/: label_list.txt  nms.tar
res_datav1/model/11classv4/: label_list.txt  nms.tar
res_datav1/model/yolov3_mobilenet_v1/: nms.tar
res_sld/config/: config_ppncnms.json  config_ppncnna.json
res_sld/model/yolov3_mobilenet_v1/: nms.tar
src/: MyMath.cpp  MyMath.hpp  MyUart.cpp  MyUart.hpp  cap.c  cap.h  comm.c  comm.h  commontype.hpp  detection.hpp  headfile.hpp  mycapture.hpp  serial.cpp  stop_watch.hpp  trvision.cpp  trvision.hpp  uart.hpp  uart_test.hpp
